Actions bar correctly positions tabs so they're aligned with tab content

--- a/stylesheets/_component.actionsbar.scss
+++ b/stylesheets/_component.actionsbar.scss
@@ -5,7 +5,7 @@
 
 
   @include respond-min($screen-tablet) {
-    margin: $line-height-base 0 8px 0;
+    margin: $line-height-base 0 9px 0;
   }
 
   //@include ie-lte(7) {
